# verl-plugin-fl

./: README.md  __init__.py  pyproject.toml
configs/: vllm_plugin_fl_dispatch.yaml
engine/: __init__.py  fsdp_fl.py
utils/: __init__.py  config_manager.py
verl_plugin_fl/: __init__.py  device_utils.py  distributed_util.py  platform.py  platform_musa.py  worker_patch.py
verl_plugin_fl/engine/: __init__.py  fsdp_fl.py  megatron_fl.py
